--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "drupal/token": "^1.0@beta",
         "drupal/ctools": "^3.0@alpha",
         "drupal/basic": "^1.2",
-        "drupal/pathauto": "^1.0@beta"
+        "drupal/pathauto": "^1.0@beta",
+        "drupal/bootstrap": "3.1"
     },
     "require-dev": {
         "behat/mink": "~1.7",
