--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "drupal/ctools": "^3.0@alpha",
         "drupal/basic": "^1.2",
         "drupal/pathauto": "^1.0@beta",
-        "drupal/bootstrap": "3.1"
+        "drupal/bootstrap": "^3.1",
+        "drupal/jethro": "^2.0"
     },
     "require-dev": {
         "behat/mink": "~1.7",
