--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "drupal/basic": "^1.2",
         "drupal/pathauto": "^1.0@beta",
         "drupal/bootstrap": "^3.1",
-        "drupal/jethro": "^2.0"
+        "drupal/jethro": "^2.0",
+        "drupal/mailchimp": "^1.2"
     },
     "require-dev": {
         "behat/mink": "~1.7",
