update drush version

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "drupal-composer/drupal-scaffold": "^2.2",
         "cweagans/composer-patches": "~1.0",
         "drupal/core": "~8.0",
-        "drush/drush": "~8.0",
+        "drush/drush": "^8.1",
         "drupal/console": "~1.0",
         "drupal/token": "^1.0@beta",
         "drupal/ctools": "^3.0@alpha",
